# yt-dlp-frontend

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/func/: downloadFuncs.py
