[project]
name = "yt-dlp-frontend"
version = "0.0.1"
description = "yt-dlp-frontend is a cross-platform local video downloader."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ali Alshamsi", email = "nexusthavoyager@gmail.com" }
]
dependencies = [
    "flet>=0.80.0",
    "yt-dlp"
]

[dependency-groups]
dev = [
    "flet[all]>=0.80.0",
    "yt-dlp"
]

[tool.flet]
org = "NexusVoyager"
product = "yt-dlp-frontend"
company = "Nexusvoyager"

[tool.flet.app]
path = "src"